# OA_Reader_APP

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
ai_end/: .dockerignore  .env.example  .gitignore  AGENTS.md  API_GUIDE.md  CLAUDE.md  Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml  test_function_call.py
ai_end/docs/plans/: 2026-03-31-clear-memory-reuse.md  2026-03-31-compat-review-fixes-design.md  2026-03-31-compat-review-fixes.md  2026-03-31-timezone-simplify-design.md  2026-04-01-ask-related-articles-dedup-design.md  2026-04-01-ask-related-articles-dedup.md
ai_end/migrations/: 001_init_generic_backend.sql  README.md  migrate.py
ai_end/scripts/: import_skills.py
ai_end/services/: load_balancer.py  queue.py
ai_end/skills/article-retrieval/: SKILL.md  TOOLS.md
ai_end/skills/todolist/: SKILL.md  TOOLS.md
ai_end/src/: __init__.py
ai_end/src/api/: admin.py  chat_service.py  compat_models.py  compat_service.py  import_probe.py  main.py  models.py
ai_end/src/chat/: __init__.py  (+9 more)
ai_end/tests/: conftest.py  prompts_test_constants.py  test_app_integration.py  test_app_utils.py  test_config.py  test_dockerfile.py  test_execute_ai_request.py  test_load_balancer.py  test_queue.py
ai_end_refactor/: .env.example  .gitignore  AGENTS.md  API_GUIDE.md  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
ai_end_refactor/migrations/: 001_init_generic_backend.sql  migrate.py  verify_table.py
ai_end_refactor/scripts/: import_documents.py
ai_end_refactor/static/: index.html
(+385 files in other folders)
